# Alambic

./: .env.example  .gitattributes  .gitignore  DEPLOIEMENT.md  Dockerfile  Makefile  README.md  docker-compose.app.yml  docker-compose.observability.yml  docker-compose.yml  docker-stack.yml  pyproject.toml
.github/workflows/: ci.yml
caddy/: Caddyfile
core/: celery_app.py  config.py  observability.py  repo.py  storage.py
docker/: Dockerfile
orchestration/: ai.py  ingestion.py  processing.py
scripts/: garage-init.sh
tasks/: ai.py  ingestion.py  processing.py
tests/: conftest.py  test_ingestion.py  test_repo.py
