[project]
name = "alambic"
version = "0.1.0"
description = "Alambic — pipeline de traitement documentaire, 100% souverain (self-hosted FR)"
requires-python = ">=3.13,<3.14"

dependencies = [
    # ── Le package partagé (modèles, repos, sécurité) ────────────────────────
    # Résolu en local via le workspace (cf. [tool.uv.sources]). C'est lui qui
    # tire sqlalchemy, alembic, cryptography, psycopg…
    "alambic-core",

    # ── Orchestration / workers ──────────────────────────────────────────────
    "celery[redis]>=5.4,<6",
    "kombu>=5.4,<6",
    "amqp>=5.2,<6",

    # ── Stockage objet (MinIO, API S3-compatible) ────────────────────────────
    "boto3>=1.34,<2",

    # ── Base de données (PostgreSQL) ─────────────────────────────────────────
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<3",

    # ── Utilitaires ──────────────────────────────────────────────────────────
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",

    # ── Observabilité ────────────────────────────────────────────────────────
    "prometheus-client>=0.20,<1",
]

[project.optional-dependencies]
monitoring = [
    "flower>=2.0,<3",
]

[dependency-groups]
# Groupe de dev (installé par défaut avec 'uv sync', exclu en prod via --no-dev).
dev = [
    "ruff>=0.5,<1",
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-mock>=3.14,<4",
    # testcontainers : tests d'intégration (vrai Postgres jetable).
    "testcontainers[postgres]>=4.5,<5",
]

# ═══════════════════════════════════════════════════════════════════════════════
# WORKSPACE uv — lie le projet applicatif au package partagé alambic_core.
# Sans ces deux blocs, 'uv sync' ignore packages/alambic_core et ses deps
# (d'où le ModuleNotFoundError: cryptography).
# ═══════════════════════════════════════════════════════════════════════════════
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
# alambic-core est résolu depuis le workspace local, pas depuis PyPI.
alambic-core = { workspace = true }

# ═══════════════════════════════════════════════════════════════════════════════
# Mode APPLICATION pour le projet racine (pas une lib distribuable).
# ═══════════════════════════════════════════════════════════════════════════════
[tool.uv]
package = false

# ═══════════════════════════════════════════════════════════════════════════════
# Outillage
# ═══════════════════════════════════════════════════════════════════════════════
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    # UP037 retirerait les quotes des forward-refs Mapped["Config"], ce qui
    # casse les relations SQLAlchemy (le modèle cible n'est pas encore importé).
    # Les quotes sont VOLONTAIRES et nécessaires ici.
    "UP037",
    # UP042 proposerait StrEnum, mais (str, Enum) est volontaire : on préserve
    # exactement les valeurs string de flowerscan_lib (compat données existantes).
    "UP042",
    # UP046 (syntaxe type params 3.12 class C[T]) : Generic[ModelT] reste clair
    # et compatible. Pas de gain à migrer.
    "UP046",
]

[tool.ruff.lint.per-file-ignores]
# Les migrations Alembic sont générées : on tolère leur style (Union, imports).
"**/migrations/*" = ["UP007", "UP035", "I001"]
# Les tests peuvent utiliser des asserts larges quand c'est volontaire.
"**/tests/*" = ["B017"]
# Modèles : F821 sur les forward-refs SQLAlchemy (Mapped["Account"]) est un faux positif.
"**/models/*" = ["F821"]

[tool.pytest.ini_options]
# testpaths couvre le projet ET le package (un seul 'make test' voit tout).
testpaths = ["tests", "packages/alambic_core/tests"]
addopts = "-q"
markers = [
    "integration: tests nécessitant Docker (testcontainers) — lents",
]